--- a/main.html
+++ b/main.html
@@ -3,13 +3,39 @@
 <html>
 
 <head>
+	<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+			crossorigin="anonymous"
+	/>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="container container-fluid my-3">
+		<div class="row">
+			<div class="col-md-4 col-sm-6 bg-teal r1c1">Row1 col1</div>
+			<div class="col-md-8 col-sm-6 bg-light-pink r1c2">Row2 col2</div>
+		</div>
+		<div class="row justify-content-between">
+			<div class="col-md-4 offset-md-2 bg-orange r2c1">Row2 col1</div>
+			<div class="col-md-4 bg-light-blue r2c2">Row2 col2</div>
+		</div>
+		<div class="row justify-content-center">
+			<div class="col-md-4 col-sm-6 bg-pink r3c1">Row3 col1</div>
+			<div class="col-md-4 col-sm-6 bg-green r3c2">Row3 col2</div>
+		</div>
+	</div>
+	<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+			crossorigin="anonymous"
+	></script>
     <script type="text/javascript" src="./script.js">
-</script>
+
+	</script>
 
 </body>
 
